tests/native/lowering/corpus/rejected/strings.php
<?php

function w03_rejected_strings(): string
{
    return "not a W03 scalar";
}

echo w03_rejected_strings(), "\n";
